--- a/src/app/components/main-header/main-header.html
+++ b/src/app/components/main-header/main-header.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="assets/icons/main-header/hytec-logo.svg" class="header-image" alt="Hytec Power Inc">
+  <img src="/assets/icons/main-header/hytec-logo.svg" class="header-image" alt="Hytec Logo" />
 
   <nav [class.mobile-menu-open]="isMobileMenuOpen">
     <ul>
