--- a/src/app/components/side-buttons/side-buttons.scss
+++ b/src/app/components/side-buttons/side-buttons.scss
@@ -24,7 +24,12 @@
     height: 56px;
     width: max-content;
 
-    background: $primarydark;
+    background: repeating-linear-gradient(45deg,
+            transparent,
+            transparent 10px,
+            rgba(0, 0, 0, 0.1) 10px,
+            rgba(0, 0, 0, 0.1) 20px),
+        $primarydark;
 
     border-radius: 999px 0 0 999px;
     border: 2px solid rgba(0, 0, 0, 0.4);
